리팩토링: 커맨드 객체 리팩토링